--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.14.2"
+        classpath "org.grails.plugins:views-gradle:1.2.6"
     }
 }
 
@@ -19,6 +20,8 @@ apply plugin:"war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"asset-pipeline"
 apply plugin:"org.grails.grails-gsp"
+apply plugin: "org.grails.grails-web"
+apply plugin: "org.grails.plugins.views-json"
 
 repositories {
     mavenLocal()
@@ -61,6 +64,9 @@ dependencies {
     //mongo
     compile 'org.grails.plugins:mongodb:6.1.4'
     compile "org.mongodb:mongodb-driver:3.5.0"
+
+    compile "org.grails.plugins:views-json:1.2.6"
+    compile "org.grails.plugins:views-json-templates:1.2.6"
 }
 
 bootRun {
